# yazelix

./: .cursorrules  .envrc  .gitignore  .mcp.json  .nu-lint.toml  .pre-commit-config.yaml  .taplo.toml  7hicjaplbcndfcqfn5jcdu8nfmggaho8  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  GEMINI.md  README.md  bjople8jhcbkcldeek1ik7t7snhvtpnh.darc  config.kdl  config.toml  config_default.toml  contributing.md  devenv.nix  devenv.root  devenv.yaml  flake.nix  home_manager_module.nix  layout.kdl  layout.swap.kdl  locked_devenv_package.nix  maintainer_shell.nix  manifest  mars.toml  mjekgjt9mdmijvtv0kcbare0ssvlg2ob.darc  mk_runtime_tree.nix  mk_yazelix_package.nix  mthahh3g6perpbokiekkhjq2bjc9hlpm  nix-ci.nix  release_metadata.toml  settings_default.jsonc  start-yazelix.sh  test-file-opening.nu  (+14 more)
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json  migration_bd.jsonl
.claude/: rusty-idd-adapter.md  settings.json
.devenv/: profile  run  tasks.db-shm  tasks.db-wal
.github/: FUNDING.yml
.kb/: AGENTS.md  config.toml
bash/: helix_mode  launch-yazelix.sh  start-yazelix.sh  start_yazelix.sh  yazelix_bash_config.sh  yzx
checks/: cache_shell_policy.nu  helix-contracts.rs  key-reference-parity.rs  no-helix-contracts.rs  support.rs  yazi-workspace-registration.lua  yzn-contracts.rs  yzx-contracts.rs  zellij-layout.rs
config_metadata/: classic_main_config_contract.toml  config_ui_metadata.toml  main_config_contract.toml  nushell_budget.toml  pack_catalog_contract.toml  rust_ownership_budget.toml  vendored_yazi_plugins.toml  yazelix_settings.schema.json  yazi_render_plan.toml  zellij_layout_families.toml
crates/yzx-config/: Cargo.toml  zellij-themes.txt
crates/yzx-config/src/: catalog.rs  common.rs  custom_popups.rs  file_actions.rs  helix_config.rs  main.rs  model.rs  native_config.rs  paths.rs  root_config.rs  ui.rs  yazi_config.rs  zellij_sidecar.rs
defaults/: config.toml
docs/: README.md  history.md  (+85 more)
rust_core/yazelix_core/: Cargo.toml
rust_core/yazelix_core/assets/: ascii_art_data.json
rust_core/yazelix_core/src/: action_registry.rs  active_config_surface.rs  agent_commands.rs  appearance_mode.rs  atomic_fs.rs  backup_timestamp.rs  bridge.rs  classic_nova_cursor_migration.rs  classic_nova_root_migration.rs  classic_nova_root_migration_tests.rs  classic_nova_root_translation.rs  cli_render.rs  command_metadata.rs  config_apply.rs  config_commands.rs  config_normalize.rs  config_state.rs  config_ui.rs  control_plane.rs  cursor_commands.rs  desktop_exec.rs  doctor_commands.rs  doctor_config_report.rs  doctor_helix_report.rs  doctor_runtime_report.rs  doctor_zellij_plugin_health.rs  edit_commands.rs  executable_file.rs  front_door_commands.rs  front_door_render.rs  ghostty_cursor_registry.rs  ghostty_materialization.rs  helix_bridge_client.rs  helix_external.rs  helix_materialization.rs  helix_steel_plugins.rs  home_manager_commands.rs  import_commands.rs  initializer_commands.rs  install_ownership_env.rs  (+62 more)
rust_core/yazelix_core/src/config_ui/: app.rs  apply_adapter.rs  custom_popups.rs  details.rs  editor.rs  keybindings.rs  model.rs  model_builder.rs  render.rs  tests.rs
rust_core/yazelix_core/src/helix_materialization/: helix_config.rs  import_notice.rs  steel.rs  tests.rs
rust_core/yazelix_core/src/launch_commands/: config_override.rs  desktop.rs  enter.rs  launch.rs  process.rs  restart.rs  terminal.rs
rust_core/yazelix_core/src/workspace_commands/: popup.rs  yazi_sidebar.rs
rust_core/yazelix_core/src/yazelix_ratconfig/: editor.rs  mod.rs  model.rs  render.rs
rust_core/yazelix_core/src/yazi_materialization/: writer.rs
rust_core/yazelix_core/src/zellij_commands/: pipe.rs  status.rs  workspace.rs
rust_core/yazelix_core/src/zellij_commands/status/: agent_usage.rs  cache.rs  tests.rs  widgets.rs
rust_core/yazelix_core/src/zellij_commands/status/agent_usage/: refresh.rs
rust_core/yazelix_core/src/zellij_commands/status/tests/: agent_usage.rs  cache.rs  mod.rs  widgets.rs
rust_core/yazelix_core/tests/: home_manager_option_metadata.rs  repo_upgrade_contract.rs  yazi_render_plan_metadata_parity.rs  yzx_control_front_door.rs  yzx_control_helix_bridge.rs  yzx_control_public_commands.rs  yzx_control_runtime_surface.rs  yzx_control_workspace_surface.rs  yzx_core_classic_nova_root_translation.rs  yzx_core_command_metadata.rs  yzx_core_config_edit.rs  yzx_core_config_normalize.rs  yzx_core_config_ui.rs  yzx_core_owned_facts.rs  yzx_core_runtime_env.rs  yzx_core_settings_jsonc_patch.rs  yzx_core_yazi_materialization.rs  yzx_core_yazi_render_plan.rs  yzx_core_zellij_render_plan.rs  yzx_root_version.rs
rust_core/yazelix_core/tests/support/: commands.rs  envelopes.rs  fixtures.rs  mod.rs
rust_core/yazelix_maintainer/: Cargo.toml
rust_core/yazelix_maintainer/src/: lib.rs  repo_canary_session.rs  repo_child_release.rs  repo_contract_validation.rs  repo_docs_validation.rs  repo_issue_sync.rs  repo_nu_lint.rs  repo_plugin_build.rs  repo_release_workflow.rs  repo_rust_budget.rs  repo_rust_commands.rs  repo_sweep_runner.rs  repo_test_runner.rs  repo_update_workflow.rs  repo_validation.rs  repo_version_bump.rs  repo_yazelix_file_inventory.rs  workspace_session_contract.rs
rust_core/yazelix_maintainer/src/repo_contract_validation/: config_surface.rs  helpers.rs  installed_runtime.rs  nix_interface.rs  nix_package.rs  readme_surface.rs  upgrade_contract.rs
rust_core/yazelix_maintainer/tests/: repo_upgrade_contract.rs  yazelix_file_target_inventory.rs
rust_core/yazelix_screen/: Cargo.toml  README.md
rust_core/yazelix_screen/examples/: play_style.rs  render_once.rs
rust_core/yazelix_screen/src/: boids.rs  game_of_life.rs  lib.rs  mandelbrot.rs
rust_core/yazelix_zellij_config_pack/: Cargo.toml  README.md
rust_core/yazelix_zellij_config_pack/config_metadata/: zellij_layout_families.toml
rust_core/yazelix_zellij_config_pack/layouts/: yzx_side.kdl  yzx_side.swap.kdl
rust_core/yazelix_zellij_config_pack/layouts/fragments/: swap_agent_closed.kdl  swap_agent_open.kdl
rust_core/yazelix_zellij_config_pack/src/: lib.rs
(+1184 files in other folders)
