[package]
name = "yazelix_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "yzx_core"
path = "src/bin/yzx_core.rs"

[[bin]]
name = "yzx_control"
path = "src/bin/yzx_control.rs"

[[bin]]
name = "yzx"
path = "src/bin/yzx.rs"

[dependencies]
crossterm = "0.29"
directories = "5.0.1"
jsonc-parser = { version = "0.32.3", features = ["cst", "serde"] }
lexopt = "0.3"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "2.0"
toml = "0.9"
yazelix_cursors = { git = "https://github.com/luccahuguet/yazelix-cursors", rev = "a1fb61bdbc981c6fb2f455bd6bab4e2244f0eb1d" }
ratconfig = { git = "https://github.com/luccahuguet/ratconfig", rev = "3a3facf8f52e2ba09a506449202603d56d8d5f6d" }
yazelix_screen = { git = "https://github.com/luccahuguet/yazelix-screen", rev = "9dc52f7112e249e0f51effdb84370d46e143379c" }
yazelix_yazi_assets = { git = "https://github.com/luccahuguet/yazelix-yazi-assets", rev = "0190035d7203251411917d0e9100a9c54f3dd907" }
yazelix_zellij_config_pack = { path = "../yazelix_zellij_config_pack" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.4"
tempfile = "3.10"
toml = "0.9"
