[package]
name = "yazelix_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "yzx_core"
path = "src/bin/yzx_core.rs"

[[bin]]
name = "yzx_control"
path = "src/bin/yzx_control.rs"

[[bin]]
name = "yzx"
path = "src/bin/yzx.rs"

[dependencies]
crossterm = "0.29"
directories = "5.0.1"
jsonc-parser = { version = "0.32.3", features = ["cst", "serde"] }
lexopt = "0.3"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "2.0"
toml = "1.1"
yazelix_cursors = { git = "https://github.com/luccahuguet/yazelix-cursors", rev = "ae56aa509e698d50c65c9aca9d59cd98a4d244ac" }
ratconfig = { git = "https://github.com/luccahuguet/ratconfig", rev = "80c9329b41d8e4c3791bb99662134e964ec7f413", features = ["crossterm-runner"] }
yazelix_screen = { git = "https://github.com/luccahuguet/yazelix-screen", rev = "9dc52f7112e249e0f51effdb84370d46e143379c" }
yazelix_yazi_assets = { git = "https://github.com/luccahuguet/yazelix-yazi-assets", rev = "9937366a545ae7d56f8042526dafdc79190a4154" }
yazelix_zellij_config_pack = { path = "../yazelix_zellij_config_pack" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.4"
tempfile = "3.10"
toml = "1.1"
