[package]
name = "yazelix_maintainer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "yzx_repo_validator"
path = "src/bin/yzx_repo_validator.rs"

[[bin]]
name = "yzx_repo_maintainer"
path = "src/bin/yzx_repo_maintainer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
yazelix_core = { path = "../yazelix_core" }
yazelix_terminal_support = { git = "https://github.com/FlexNetOS/yazelix-terminal-support", rev = "6ab751a75d60482584d1fa898f72500fbdb8356c" }

[dev-dependencies]
tempfile = "3.10"
