[package]
name = "yazelix_zellij_config_pack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Deterministic Zellij config and layout renderer from Yazelix"
license = "Apache-2.0"
repository = "https://github.com/luccahuguet/yazelix"
readme = "README.md"
keywords = ["zellij", "terminal", "tui", "yazelix"]
categories = ["command-line-utilities"]

[[bin]]
name = "yazelix_zellij_config_pack"
path = "src/bin/yazelix_zellij_config_pack.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
